--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": ">=4.1.2"
     "bootstrap-vue": "^1.2.0",
     "vue": "^2.5.2"
   },
